--- a/intl.zh-CN/新功能发布记录/云安全中心文档概览.md
+++ b/intl.zh-CN/新功能发布记录/云安全中心文档概览.md
@@ -10,11 +10,11 @@
 
 ## 查看安全概览信息 {#section_jtr_yuc_nmu .section}
 
--   [总览](../../../../intl.zh-CN/用户指南/总览.md#)
+[总览](../../../../intl.zh-CN/用户指南/总览.md#)
 
 ## 查看资产保护状态 {#section_em3_k11_2hb .section}
 
--   [资产列表](intl.zh-CN/用户指南/资产管理.md#)
+[资产管理](../../../../intl.zh-CN/用户指南/资产管理.md#)
 
 ## 查看与处理告警事件 {#section_aqk_l11_2hb .section}
 
@@ -29,17 +29,17 @@
 
 ## 检测与管理漏洞 {#section_q1p_db1_2hb .section}
 
--   [漏洞修复必要性说明](intl.zh-CN/用户指南/漏洞管理/漏洞修复必要性说明.md#)
--   [Linux软件漏洞](intl.zh-CN/用户指南/漏洞管理/Linux软件漏洞.md#)
--   [Windows系统漏洞](intl.zh-CN/用户指南/漏洞管理/Linux软件漏洞.md#)
--   [Web-CMS漏洞](intl.zh-CN/用户指南/漏洞管理/Web-CMS漏洞.md#)
--   [应急漏洞](intl.zh-CN/用户指南/漏洞管理/应急漏洞.md#)
--   [漏洞管理与设置白名单](intl.zh-CN/用户指南/漏洞管理/漏洞管理设置与加白名单.md#)
--   [服务器软件漏洞修复](intl.zh-CN/用户指南/漏洞管理/服务器软件漏洞修复.md#)
+-   [漏洞修复必要性说明](intl.zh-CN/用户指南/漏洞修复/漏洞修复必要性说明.md#)
+-   [Linux软件漏洞](intl.zh-CN/用户指南/漏洞修复/Linux软件漏洞.md#)
+-   [Windows系统漏洞](intl.zh-CN/用户指南/漏洞修复/Linux软件漏洞.md#)
+-   [Web-CMS漏洞](intl.zh-CN/用户指南/漏洞修复/Web-CMS漏洞.md#)
+-   [应急漏洞](intl.zh-CN/用户指南/漏洞修复/应急漏洞.md#)
+-   [漏洞管理与设置白名单](intl.zh-CN/用户指南/漏洞修复/漏洞管理设置与加白名单.md#)
+-   [服务器软件漏洞修复](intl.zh-CN/用户指南/漏洞修复/服务器软件漏洞修复.md#)
 
 ## 检测与查看云产品安全配置 {#section_rxt_5w0_5rn .section}
 
--   [云平台配置检查](intl.zh-CN/用户指南/云平台配置检查.md#)
+[云平台配置检查](../../../../intl.zh-CN/用户指南/云平台配置检查.md#)
 
 ## 配置与执行基线检测 {#section_jnk_2b1_2hb .section}
 
@@ -72,15 +72,15 @@
 
 ## 查看安全报告 {#section_uwb_7th_zsc .section}
 
--   [安全报告](../../../../intl.zh-CN/用户指南/安全报告.md#)
+[安全报告](../../../../intl.zh-CN/用户指南/安全报告.md#)
 
 ## 查看攻击分析信息 {#section_fdl_2b1_2hb .section}
 
--   [攻击分析](intl.zh-CN/用户指南/攻击分析.md#)
+[攻击分析](../../../../intl.zh-CN/用户指南/攻击分析.md#)
 
 ## 管理资产指纹 {#section_drd_znk_vzj .section}
 
--   [资产指纹](intl.zh-CN/用户指南/资产指纹.md#)
+[资产指纹](../../../../intl.zh-CN/用户指南/资产指纹.md#)
 
 ## 设置 {#section_e5b_tc1_2hb .section}
 
@@ -90,5 +90,5 @@
 
 ## 常见问题 {#section_19v_euq_szn .section}
 
--   [云安全中心常见问题概览](../../../../intl.zh-CN/常见问题/云安全中心常见问题概览.md#)
+[云安全中心常见问题概览](../../../../intl.zh-CN/常见问题/云安全中心常见问题概览.md#)
 
