--- a/intl.zh-CN/常见问题/云安全中心常见问题概览.md
+++ b/intl.zh-CN/常见问题/云安全中心常见问题概览.md
@@ -11,7 +11,7 @@
 
 ## 权限相关问题 {#section_xwi_c6l_ede .section}
 
--   [子账户登录提示当前操作未授权FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/子账户登录提示当前操作未授权FAQ.md#)
+[子账户登录提示当前操作未授权FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/子账户登录提示当前操作未授权FAQ.md#)
 
 ## 安装、卸载相关问题 {#section_ymh_u9c_vbp .section}
 
@@ -56,7 +56,7 @@
 
 ## 网页被篡改相关问题 {#section_dkd_8di_jje .section}
 
--   [短信或邮件报网站后门](intl.zh-CN/常见问题/常见问题隐藏目录/短信或邮件报网站后门.md#)
+[短信或邮件报网站后门](intl.zh-CN/常见问题/常见问题隐藏目录/短信或邮件报网站后门.md#)
 
 ## 漏洞相关问题 {#section_dgw_5fy_jp3 .section}
 
@@ -68,8 +68,9 @@
 -   [如何手动检测系统软件漏洞？](intl.zh-CN/常见问题/常见问题隐藏目录/如何手动检测系统软件漏洞？.md#)
 -   [漏洞修复后手动验证没有反应](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞修复后手动验证没有反应.md#)
 -   [排查云安全中心无法验证系统漏洞修复的问题](intl.zh-CN/常见问题/常见问题隐藏目录/排查云安全中心无法验证系统漏洞修复的问题.md#)
--   [漏洞修复优先级排序参考](../../../../intl.zh-CN/用户指南/漏洞管理/漏洞修复优先级排序参考.md#)
+-   [漏洞修复优先级排序参考](../../../../intl.zh-CN/用户指南/漏洞修复/漏洞修复优先级排序参考.md#)
 -   [软件漏洞功能收费说明](intl.zh-CN/常见问题/常见问题隐藏目录/软件漏洞功能收费说明.md#)
+
 -   [漏洞扫描周期说明](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞扫描周期说明.md#)
 -   [服务器软件漏洞修复最佳实践](intl.zh-CN/常见问题/常见问题隐藏目录/服务器软件漏洞修复最佳实践.md#)
 -   [漏洞扫描FAQ](intl.zh-CN/常见问题/常见问题隐藏目录/漏洞扫描FAQ.md#)
@@ -89,11 +90,11 @@
 
 ## 日志相关问题 {#section_fmb_l6r_1pm .section}
 
--   [查看云安全中心Aegis的日志](intl.zh-CN/常见问题/常见问题隐藏目录/查看云安全中心Aegis的日志.md#)
+[查看云安全中心Aegis的日志](intl.zh-CN/常见问题/常见问题隐藏目录/查看云安全中心Aegis的日志.md#)
 
 ## AK和账密泄露相关问题 {#section_d5x_iij_cns .section}
 
--   [高危敏感信息泄露处置方案](intl.zh-CN/常见问题/常见问题隐藏目录/高危敏感信息泄露处置方案.md#)
+[高危敏感信息泄露处置方案](intl.zh-CN/常见问题/常见问题隐藏目录/高危敏感信息泄露处置方案.md#)
 
 ## 其他使用问题 {#section_x04_cz8_fvl .section}
 
