--- a/intl.zh-CN/用户指南/基线检查/执行基线检测.md
+++ b/intl.zh-CN/用户指南/基线检查/执行基线检测.md
@@ -8,41 +8,41 @@
 
 您可在基线检查页面上方查看云安全中心在您资产中检测到的基线检查结果汇总数据。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/155953428321603_zh-CN.png)
+![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/156393729421603_zh-CN.png)
 
--   检查服务器数：云安全中心执行基线检查的服务器数量。
+-   **检查服务器数**：云安全中心执行基线检查的服务器数量。
 
-    **检查服务器数**是您在[配置扫描策略](intl.zh-CN/用户指南/基线检查/新增和配置基线检查策略.md#ul_xwj_qzk_dhb)时勾选的分组服务器中服务器的台数。
+    **检查服务器数**是您在[配置基线检查策略](intl.zh-CN/用户指南/基线检查/新增和配置基线检查策略.md#ul_xwj_qzk_dhb)时勾选的分组服务器中服务器的总台数。
 
--   基线数：是您在[配置扫描策略](intl.zh-CN/用户指南/基线检查/新增和配置基线检查策略.md#ul_xwj_qzk_dhb)时勾选的**基线检查项**的数量。
--   最近检查通过率：最近一次执行基线检查的基线合格率。
+-   **检查项**：是您在[配置基线检查策略](intl.zh-CN/用户指南/基线检查/新增和配置基线检查策略.md#ul_xwj_qzk_dhb)时勾选的**基线名称**的数量。
+-   **最近检查通过率**：最近一次执行基线检查的基线合格率。
 
     **最近检查通过率**字体为绿色时代表扫描的资产中基线配置合格率较高；字体为红色时说明检查的资产中不合格的基线配置较多，可能存在安全隐患，建议前往基线检查详情页面查看并尽快加固检查**未通过**的基线配置。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/155953428341096_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/156393729451829_zh-CN.png)
 
 
 ## 即时手动基线检查 {#section_pq1_3ql_dhb .section}
 
-云安全中心基线检查功能支持周期性自动扫描（[配置基线策略](intl.zh-CN/用户指南/基线检查/新增和配置基线检查策略.md#ul_xwj_qzk_dhb)时选择**检测周期**和**检测时间段**即可定时自动扫描）和即时手动扫描（执行**立即检测**）。
+云安全中心基线检查功能支持周期性自动扫描（[配置基线检查策略](intl.zh-CN/用户指南/基线检查/新增和配置基线检查策略.md#ul_xwj_qzk_dhb)时选择**检测周期**即可定时自动扫描）和即时手动扫描（执行**立即检测**）。
 
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
-2.  在左侧导航栏，单击**基线检查**。
-3.  在**扫描策略**下拉框中选择需要执行即时手动检查的基线策略。
+2.  在左侧导航栏，单击**安全防范** \> **基线检查**。
+3.  在**基线检查策略**下拉框中选择需要执行即时手动检查的基线策略。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/155953428341095_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/156393729441095_zh-CN.png)
 
     **说明：** **风险项/影响服务器数**不为0，表示有服务器未通过该基线检测，服务器存在风险隐患。
 
-4.  单击**立即检测**。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/155953428441092_zh-CN.png)
+4.  单击**立即检测**。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/156393729441092_zh-CN.png) 
 
     执行**立即检测**后检测概览区域将显示实时检测进度。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/155953428441093_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/156393729541093_zh-CN.png)
 
     单击**进度详情**可展示当前已检测成功/失败的服务器数量以及检测失败的原因。您可单击**查看解决方案**了解详细的修复方案。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/155953428441094_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/156393729541094_zh-CN.png)
 
     单击**刷新进度详情**可查看更新的检测结果。
 
@@ -52,23 +52,25 @@
 基线策略扫描完成后，您可在基线检查列表中单击**基线名称**打开该基线项目的详情页面，查看该基线项影响的所有资产、风险项合格状态、加固建议等，还可对检测**未通过**的基线项目执行**忽略**或对已完成修复的基线项目执行**验证**。
 
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
-2.  在左侧导航栏单击**基线检查**。
+2.  在左侧导航栏单击**安全防范** \> **基线检查**。
 3.  在基线检测列表**基线名称**栏中单击需要查看的基线项。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/155953428441097_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/156393729541097_zh-CN.png)
 
 4.  在基线详情页面可执行以下操作：
     -   查看该基线项目影响的所有资产信息。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/155953428441098_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/156393729541098_zh-CN.png)
 
-    -   在详情列表单击单个资产左侧的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/155953428441099_zh-CN.png)可展开显示该资产的详细基线配置风险项和风险项的检测结果（**已通过**/**未通过**）。
+    -   在详情列表单击单个资产左侧的**查看**可查看该资产的详细基线配置风险项和风险项的检测结果（**已通过**/**未通过**）。
 
         **说明：** 建议对**未通过**检测的基线项目进行加固，对高危险等级的风险项立即加固。
 
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/156393729651830_zh-CN.png)
+
     -   如果您不希望收到该基线检查项的告警，可勾选检查项后单击**忽略**，将该检查项告警从基线检查告警列表中移除。忽略后，该基线检查项将不再触发告警。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/155953428441100_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/156393729641100_zh-CN.png)
 
         **说明：** 勾选多个检查项后单击左下角的**忽略**可批量执行忽略操作。
 
@@ -76,13 +78,13 @@
 
         建议根据**加固建议**对基线配置进行修复或加固。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/155953428441101_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/156393729641101_zh-CN.png)
 
         **说明：** 建议对高危险等级的基线配置项尽快执行加固。
 
     -   基线项目加固后，单击**验证**一键手动验证该基线项目是否已修复成功。执行验证后，该项目状态将显示为**验证中**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/155953428441102_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/41682/156393729641102_zh-CN.png)
 
         如果您未进行手动验证，云安全中心将会根据您在扫描策略中设置的检测周期执行自动验证。
 
