--- a/intl.zh-CN/用户指南/设置/设置.md
+++ b/intl.zh-CN/用户指南/设置/设置.md
@@ -10,35 +10,43 @@
 
 **说明：** 开启病毒自动隔离功能后，云安全中心中新购的服务器将默认自动开启该功能。
 
-**操作步骤**
+**操作步骤** 
 
-1.  在云安全中心控制台定位到设置页面，单击**设置**页签。
-2.  单击**管理**，并在病毒查杀检测范围对话框中勾选要开启病毒查杀自动隔离的服务器。
+1.  登录阿里云[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
+2.  定位到**安全运营** \> **设置**页面，单击**设置**页签。
+3.  在病毒查杀模块，单击**管理**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156093494541289_zh-CN.png)
+    ![0](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156404880449752_zh-CN.png)
 
-3.  单击**确定**。
-4.  单击**自动隔离**，开启病毒查杀自动隔离的功能。开启自动隔离后，云安全中心将对检测出的主流病毒类型进行自动隔离，您可在安全告警处理页面**精准防御**类型告警列表中，查看被病毒查杀功能自动隔离掉的病毒。
+4.  在病毒查杀检测范围对话框中勾选要开启病毒查杀自动隔离的服务器。
+
+    从左侧**未检测服务器**列表中勾选要开启病毒查杀的服务器，单击右向箭头，将其移入右侧**已检测服务器**列表中，为该服务器将开启病毒查杀；将服务器从右侧框移入左侧框，为该服务器关闭病毒查杀功能。
+
+5.  单击**确定**。
+6.  在病毒查杀模块，单击**自动隔离**后按钮，开启病毒查杀自动隔离的功能。开启自动隔离后，云安全中心将对检测出的主流病毒类型进行自动隔离，您可在安全告警处理页面**精准防御**类型告警列表中，查看被病毒查杀功能自动隔离掉的病毒。
 
     **说明：** 病毒自动隔离服务开通后，可能会存在部分程序误报或未隔离成功的情况。
 
     -   误报的事件可以从文件隔离箱中恢复。具体请参考[文件隔离箱](intl.zh-CN/用户指南/安全告警处理/文件隔离箱.md#)。
-    -   未隔离成功的事件可以在安全告警中手动隔离。具体请参考[查看和处理/批量处理告警事件](intl.zh-CN/用户指南/安全告警处理/查看和处理告警事件.md#)。
+    -   未隔离成功的事件可以在安全告警中手动隔离。具体请参考[查看和处理告警事件](intl.zh-CN/用户指南/安全告警处理/查看和处理告警事件.md#)。
 
 ## 网站后门查杀 {#section_p4n_cjz_dhb .section}
 
 网站后门查杀功能会定期检测网站服务器、网页目录中的网站后门及木马程序。
 
-只有为服务器开启网站后门查收后，云安全中心安全告警才会触发网站后门检测，并向您展示相关告警记录。关于安全告警的详细介绍，请参考[安全告警类型](intl.zh-CN/用户指南/安全告警处理/安全告警类型概述.md#)。
+只有为服务器开启网站后门查杀后，云安全中心安全告警才会触发网站后门检测，并向您展示相关告警记录。关于安全告警的详细介绍，请参考[安全告警类型](intl.zh-CN/用户指南/安全告警处理/安全告警类型概述.md#)。
 
-**操作步骤**
+**操作步骤** 
 
-1.  在云安全中心控制台定位到设置页面，单击**设置**页签。
-2.  在网站后门查杀模块，单击**管理**，设置需要开启网站后门查杀的服务器。
+1.  在云安全中心控制台定位到**安全运营** \> **设置**页面，单击**设置**页签。
+2.  在网站后门查杀模块，单击**管理**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156093494548709_zh-CN.png)
+    ![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156404880449755_zh-CN.png)
 
-3.  从左侧**未检测服务器**列表中勾选要开启网站后门查杀的服务器，单击右向箭头，将其移入右侧**已检测服务器**列表中，为该服务器将开启网站后门查杀；将服务器从右侧框移入左侧框，为该服务器关闭网站后门查杀功能。
+3.  设置需要开启网站后门查杀的服务器。
+
+    从左侧**未检测服务器**列表中勾选要开启网站后门查杀的服务器，单击右向箭头，将其移入右侧**已检测服务器**列表中，为该服务器将开启网站后门查杀；将服务器从右侧框移入左侧框，为该服务器关闭网站后门查杀功能。
+
 4.  单击**确定**。
 
 ## 防护模式管理 {#section_ha1_x19_1to .section}
@@ -47,19 +55,21 @@
 
 Agent插件在服务器上运行时，会占用少量服务器资源。您可以调整Agent的运行模式，限制其资源占用量。Agent支持以下两种运行模式：
 
--   业务优先模式：使用最低的内存和CPU运行防护工作，Agent占用不超过1%CPU及50MB内存。
--   防护优先模式：以安全防护为优先考量，运行使用相对高的系统内存和CPU，Agent占用不超过10%CPU及80MB内存。
+-   **业务优先模式**：使用最低的内存和CPU运行防护工作，Agent占用不超过1%CPU及50MB内存。
+-   **防护优先模式**：以安全防护为优先考量，运行使用相对高的系统内存和CPU，Agent占用不超过10%CPU及80MB内存。
 
-当Agent占用资源超过限制峰值时，Agent将会暂停工作；直至CPU占用下降到合理范围内后，Agent会自动重启。
+**说明：** 当Agent占用资源超过限制峰值时，Agent将会暂停工作；直至CPU占用下降到合理范围内后，Agent会自动重启。
 
-**操作步骤**
+**操作步骤** 
 
-1.  在云安全中心控制台定位到设置页面，单击**设置**页签。
+1.  在云安全中心控制台定位到**安全运营** \> **设置**页面，单击**设置**页签。
 2.  在**防护模式管理**模块，单击**管理**。
-3.  在防护模式管理管理对话框中，为服务器配置Agent运行模式。
-4.  从左侧列表中勾选要设置为防护优先模式的服务器，单击右向箭头将其移入右侧**防护优先模式**列表中；从右侧列表中勾选要设置为**业务优先模式**的服务器，单击左向箭头将其移入左侧**业务优先模式服务器**列表中。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156093494548716_zh-CN.png)
+    ![2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156404880452786_zh-CN.png)
 
-5.  单击**确定**，完成防护模式的配置。
+3.  在防护模式管理对话框中，为服务器配置Agent运行模式。
+
+    从左侧列表中勾选要设置为**防护优先模式**的服务器，单击右向箭头将其移入右侧**防护优先模式**列表中；从右侧列表中勾选要设置为**业务优先模式**的服务器，单击左向箭头将其移入左侧**业务优先模式**服务器列表中。
+
+4.  单击**确定**，完成防护模式的配置。
 
