--- a/intl.zh-CN/用户指南/设置/通知.md
+++ b/intl.zh-CN/用户指南/设置/通知.md
@@ -8,11 +8,11 @@
 
 **通知的设置流程如下图所示。**
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156275144451025_zh-CN.png)
+![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156404883151025_zh-CN.png)
 
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)
 2.  在左侧导航栏，单击**安全运营** \> **设置** \> **通知**。
-3.  针对**漏洞**、**基线检查**、**安全告警**，分别勾选需要进行告警的安全事件等级（即**我关注的等级**）、**通知方式**、**通知时间**。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156275144551027_zh-CN.png)
+3.  针对**漏洞**、**基线检查**、**安全告警**、**AccessKey泄露情报**，分别勾选需要进行告警的安全事件等级（即**我关注的等级**）、**通知方式**、**通知时间**。![2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156404883151027_zh-CN.png)
 
  
 
@@ -24,38 +24,38 @@
 
     1.  在**钉钉机器人通知（Beta）**模块，单击**添加新的机器人**。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156275144551028_zh-CN.png)
+        ![3](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156404883151028_zh-CN.png)
 
     2.  在**添加钉钉机器人**页面，配置钉钉机器人参数项。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156275144551029_zh-CN.png)
+        ![4](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156404883151029_zh-CN.png)
 
-        -   机器人名称：手动输入机器人名称。
-        -   Webhook地址：在要应用该钉钉机器人的钉钉群中，找到机器人的Webhook链接，复制粘贴到**Webhook地址**输入栏中。
+        -   **机器人名称**：手动输入机器人名称。
+        -   **Webhook地址**：在要应用该钉钉机器人的钉钉群中，找到机器人的Webhook链接，复制粘贴到**Webhook地址**输入栏中。
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156275144551030_zh-CN.png)
+            ![5](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156404883251030_zh-CN.png)
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156275144651032_zh-CN.png)
+            ![6](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156404883251032_zh-CN.png)
 
-            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156275144651033_zh-CN.png)
+            ![7](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156404883251033_zh-CN.png)
 
             **说明：** 未安装钉钉并建立钉钉群的用户，无法使用钉钉机器人通知。如果已有钉钉群中未添加钉钉机器人，需要在钉钉群**群设置** \> **群机器人** \> **添加群机器人** \> **自定义（通过Webhook接入自定义服务）**，添加自定义机器人。
 
-        -   资产分组：单击下拉框，勾选您在云安全中心**资产管理**中创建的资产分组，钉钉机器人将会发送该资产分组中资产相关的告警通知。
+        -   **资产分组**：单击下拉框，勾选您在云安全中心**资产管理**中创建的资产分组，钉钉机器人将会发送该资产分组中资产相关的告警通知。
 
             **说明：** 资产分组需要在**资产管理**页面中进行修改。
 
-        -   通知范围：单击下拉框，勾选需要钉钉机器人通知的告警类型。
+        -   **通知范围**：单击下拉框，勾选需要钉钉机器人通知的告警类型。
 
             **说明：** 目前，钉钉机器人通知范围覆盖漏洞、基线检查风险和安全告警。
 
-        -   通知频率：选择钉钉机器人发送通知的间隔周期，可选1分钟、5分钟、10分钟、30分钟或无限制（每检测到一条告警实时发送通知）。
-        -   通知语言：选择钉钉机器人发送通知的语言类型，可选中文、英文。
+        -   **通知频率**：选择钉钉机器人发送通知的间隔周期，可选1分钟、5分钟、10分钟、30分钟或无限制（每检测到一条告警实时发送通知）。
+        -   **通知语言**：选择钉钉机器人发送通知的语言类型，可选中文、英文。
     3.  单击**添加**，完成钉钉机器人通知的创建。
 
         新创建的钉钉机器人通知是默认启用的。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156275144651036_zh-CN.png)
+        ![8](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156404883251036_zh-CN.png)
 
         **说明：** 添加机器人通知后，需单击**操作**栏的**测试**，验证钉钉机器人通知是否已经和钉钉群连通。
 
