--- a/cn.zh-CN/用户指南/云平台配置检查.md
+++ b/cn.zh-CN/用户指南/云平台配置检查.md
@@ -2,7 +2,7 @@
 
 本文档介绍了云平台配置检查功能可检测的项目和相关操作。
 
-云安全中心云平台配置检查从身份认证、网络访问控制、数据安全、日志审计、基础安全防护五个维度为您提供云产品安全配置的检测，帮助您及时发现您的云产品配置风险并提供相应的修复方案。
+云安全中心云平台配置检查从身份认证及权限、网络访问控制、数据安全、日志审计、监控告警、基础安全防护六个维度为您提供云产品安全配置的检测，帮助您及时发现您的云产品配置风险并提供相应的修复方案。
 
 ## 云平台配置检查项列表 {#section_0zx_00n_ko6 .section}
 
@@ -33,62 +33,64 @@
 |Redis-白名单配置检查|网络访问控制|检测Redis的访问控制策略是否有0.0.0.0/0（任意IP）或为空的配置。不建议数据库类服务直接对公网开放，需要限定访问范围为指定IP访问。|
 |分析型数据库 PostgreSQL版-白名单配置检查|网络访问控制|检测PostgreSQL的访问控制策略是否有0.0.0.0/0（任意IP）或为空的配置。不建议数据库类服务直接对公网开放，需要限定访问范围为指定IP访问。|
 |SSL证书有效期检查|数据安全|检测SSL证书是否超出有效期。如果证书过期，您将无法继续使用SSL证书服务。|
+|POLARDB-白名单配置检查|网络访问控制|检查云数据库POLARDB的访问控制策略是否开放公网访问且有0.0.0.0/0（任意IP）的配置，不建议数据库类服务直接对公网开放，需要限定访问范围为指定IP访问。|
 
 ## 操作步骤 {#section_w2z_q2m_3gb .section}
 
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
-2.  单击左侧导航栏**云平台配置检查**。
+2.  单击左侧导航栏**安全防范** \> **云平台配置检查**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156136107049839_zh-CN.png)
+    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156404887049839_zh-CN.png)
 
-3.  在**云平台配置检查**页面单击**立即授权**，打开**云资源访问授权**页面。
+3.  您可在**云平台配置检查**页面进行以下操作：
+    -   **检测设置** 
+        1.  单击**云平台配置检查**页面右上角的**检测设置**，进入**检测设置**页面。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156136107050006_zh-CN.png)
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156404887052312_zh-CN.png)
 
-    **说明：** 如果您已开通过了云平台配置检查的访问授权，可忽略步骤4和步骤5。
+        2.  设置云产品配置项的**检测周期**和**检测时间**。
 
-4.  单击**同意授权**，允许云安全中心对您相关的云资源进行访问。
+            ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156404887036047_zh-CN.png)
 
-    授权成功后您可以开始使用云平台配置检查功能对云产品配置是否存在风险进行检查，并对风险进行处理。
+            **检测周期**可选周一至周日，支持多选。
 
-5.  单击**云平台配置检查**。
+            **检测时间**可选4个时间段中的任一时间段。在选定时间段内，云安全中心会对所有检测项自动执行一次检测。默认每隔1天**00:00:00-06:00:00**执行自动检测。
 
-    您可在**云平台配置检查**页面进行以下操作：
+        3.  单击**确定**。
+    -   **立即检测** 
 
-    -   **检测设置**：设置云产品配置项的**检测周期**和**检测时间**。
+        单击**云平台配置检查**页面右侧的**立即检测**，对云产品配置进行全量检测，确定是否存在风险项以及影响的资产数量。检测项列表中按检测结果的严重等级由高危到低危进行排序。
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156136107036047_zh-CN.png)
-
-        检测周期可选周一~周日，支持多选。
-
-        检测时间可选4个时间段中的任一时间段。在选定时间段内，云安全中心会对所有检测项自动执行一次检测。默认每隔1天**00:00:00-06:00:00**执行自动检测。
-
-    -   **立即检测**：对云产品配置进行全量检测，确定是否存在风险项以及影响的资产数量。检测项列表中按检测结果的严重等级由高危到低危进行排序。
-
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156136107036048_zh-CN.png)
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156404887052313_zh-CN.png)
 
         **说明：** 全量检测需全部完成后才可进行其他操作，请耐心等待。
 
-    -   **验证**：可针对单个检测项进行配置风险验证。如您对部分配置项进行了修改，可单击**验证**检验新的配置是否存在安全风险。
+    -   **验证** 
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156136107036049_zh-CN.png)
+        可对单个或批量检测项进行配置风险验证。如您对部分配置项进行了修改，可单击**验证**检验新的配置是否存在安全风险。
 
-    -   单击检测项名称可跳转到详情页面，查看对应的检测详情描述、可能产生的影响和处理建议。
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156404887052315_zh-CN.png)
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156136107036050_zh-CN.png)
+    -   **忽略** 
 
-    -   **忽略**：如果您判断检测出的某个风险项不存在安全风险，可单击**忽略**将该检测项状态调整为**已忽略**。**已忽略**的检测项将不会包含在**风险项**总数中。
+        如果您判断检测出的某个风险项不存在安全风险，可单击**忽略**将该检测项状态调整为**已忽略**。**已忽略**的检测项将不会包含在**风险项**总数中。
 
-        您也可对**已忽略**的检测项**取消忽略**。
+        在检测项列表中，您也可对**已忽略**的检测项**取消忽略**。
 
         **说明：** **忽略**只对本次检测结果进行忽略，后续如果再次检测该出该风险，云安全中心仍会展示该检测结果的告警。
 
-    -   **标记为误报**：如果您判断检测出的某个风险项属于误报，可单击**标记为误报**将该检测项状态调整为**已标记误报**。
+    -   **查看检测详情** 
 
-        **说明：** 后续再次进行风险检测时，**标记为误报**的检测项将不会被列入风险项中。
+        单击**基线检测项**名称可跳转到详情页面，查看对应的检测详情描述、可能产生的影响和处理建议。
 
-    -   导出检测结果CVS文件到本地。
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156404887136050_zh-CN.png)
 
-        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156136107150010_zh-CN.png)
+    -   **导出检测结果** 
+
+        导出检测结果Excel文件到本地。
+
+        **说明：** 云平台配置检查的检测结果导出功能需为企业版功能，基础版和高级版不支持。基础版和高级版用户需先升级到企业版，才可使用此导出功能。
+
+        ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/87309/156404887150010_zh-CN.png)
 
 
