--- a/cn.zh-CN/用户指南/设置/安装__卸载插件.md
+++ b/cn.zh-CN/用户指南/设置/安装__卸载插件.md
@@ -5,8 +5,8 @@
 云安全中心Agent是云安全中心提供的本地安全插件，您必须在服务器操作系统上安装云安全中心Agent，才能使用云安全中心提供的安全防护服务。关于Agent插件的说明，请参考[Agent说明](intl.zh-CN/接入云安全中心/Agent说明.md#)。
 
 1.  登录[云盾云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
-2.  在左侧导航栏，单击**设置**。
-3.  打开**安装/卸载插件**页签。![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146809/156093852949746_zh-CN.png)
+2.  在左侧导航栏，单击**安全运营** \> **设置**。
+3.  打开**安装/卸载插件**页签。![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146809/156404895549746_zh-CN.png)
 
 
 4.  查看目标服务器是否在未受保护的服务器列表中。您可以输入服务器IP或名称进行搜索，快速定位到目标服务器。
