--- a/intl.zh-CN/用户指南/总览.md
+++ b/intl.zh-CN/用户指南/总览.md
@@ -4,13 +4,13 @@
 
 您可在**总览**页面查看您资产的安全概览信息和进行相关操作。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156104613149837_zh-CN.png)
+![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156448122849837_zh-CN.png)
 
 **总览**页面展示以下模块：
 
 -   云安全中心的版本信息，提供**升级**高级版、企业版、扩充资产规模和**续费**操作。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156104613148508_zh-CN.png)
+    ![2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156448122848508_zh-CN.png)
 
 -   **安全评分**：您资产的安全分值以及受保护/未受保护资产数量。具体评分分值参见安全分值表。
 
@@ -23,13 +23,13 @@
     -   攻击事件等其他风险或威胁
 -   查看您已安装和未安装Agent插件的资产数量，也就是已在云安全中心防护范围内的资产和还未受云安全中心防护的资产数量。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156104613148509_zh-CN.png)
+    ![3](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156448122948509_zh-CN.png)
 
     单击**未保护资产**下的数字，可以跳转到安装/卸载插件页面，您可以将未受保护的资产接入云安全中心的安全防护内。有关Agent安装的详细操作，参见[安装Agent](../../../../intl.zh-CN/接入云安全中心/安装Agent.md#)。
 
 -   查看威胁统计数据：
     -   **待处理告警**：显示您资产中的告警总数量和不同危险等级（紧急、可疑、提醒）告警对应的数量。单击待处理告警总数值可跳转到[安全告警](intl.zh-CN/用户指南/安全告警处理/安全告警类型概述.md#)页面。
-    -   **待修复漏洞**：显示您资产中还未修复的漏洞总数和不同漏洞风险等级对应的数量。单击待修复漏洞的总数量可跳转到漏洞修复页面。详见[漏洞修复必要性说明](intl.zh-CN/用户指南/漏洞管理/漏洞修复必要性说明.md#)。
+    -   **待修复漏洞**：显示您资产中还未修复的漏洞总数和不同漏洞风险等级对应的数量。单击待修复漏洞的总数量可跳转到漏洞修复页面。详见[漏洞修复必要性说明](intl.zh-CN/用户指南/漏洞修复/漏洞修复必要性说明.md#)。
     -   **基线问题**：显示您资产中存在的基线风险总数量和不同危险等级的基线风险对应的数量。单击基线问题总数值可跳转到[基线检查](intl.zh-CN/用户指南/基线检查/基线检查概述.md#)页面。
     -   **攻击次数**：显示您资产受到攻击的总次数。单击攻击总次数可跳转到[攻击分析](intl.zh-CN/用户指南/攻击分析.md#)页面。
 -   **云平台配置风险**：检测到的云产品基线配置存在的风险。单击**查看全部**可跳转到云平台配置检查页面。详细操作参见[云平台配置检查](intl.zh-CN/用户指南/云平台配置检查.md#)。
@@ -39,10 +39,12 @@
 
 云安全中心支持基础版、高级版和企业版，您可在**总览**页面右上角查看云安全中心的版本信息。基础版、高级版和企业版支持的功能参见[功能特性](../../../../intl.zh-CN/产品简介/功能特性.md#)。
 
--   **基础版**：页面右上角显示云安全中心的版本信息和**升级**按钮。升级到高级版或企业版后可使用基线检查、资产指纹、恶意进程（云查杀）、日志分析等高级功能。
--   **高级版/企业版**：页面右上角显示云安全中心的到期日期和资产规模（服务器台数），并提供**续费**操作按钮。
+-   **基础版**：页面右上角显示云安全中心的版本信息和**购买**按钮。升级到高级版或企业版后可使用基线检查、资产指纹、恶意进程（云查杀）、日志分析等高级功能。
+-   **高级版/企业版**：页面右上角显示云安全中心的到期日期和资产规模（服务器台数），并提供**升级**和**续费**操作按钮。
 
     **说明：** 如果当前服务器数量超过购买服务时配置的服务器数量，页面右上角会出现**扩充资产规模**操作按钮，提示您尽快扩充资产规模。
+
+    ![6](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/15448/156448122953784_zh-CN.png)
 
 
 ## 安全分值表 {#section_jxm_rrk_wfb .section}
@@ -54,10 +56,12 @@
 |70-84|您的资产存检测出多条安全风险，已经存在安全隐患，可被黑客利用入侵主机，请您尽快处理。|
 |69分以下|您的资产检测出多条安全风险，已经暴露在黑客入侵和病毒感染的威胁下，请您尽快处理。|
 
+## 安全评分扣分项目表 {#section_i9g_7hm_qci .section}
+
 |安全分扣分项|加固建议|
 |------|----|
 |缺少安全运营中心。|建立纵深防御体系。如有疑问请提交工单了解详情。|
-|存在未修复漏洞。|修复漏洞，详见[漏洞管理](intl.zh-CN/用户指南/漏洞管理/漏洞修复必要性说明.md#)。|
+|存在未修复漏洞。|修复漏洞，详见[漏洞管理](intl.zh-CN/用户指南/漏洞修复/漏洞修复必要性说明.md#)。|
 |存在未处理的告警事件。|对告警事件进行及时处理。详见[安全告警类型概述](intl.zh-CN/用户指南/安全告警处理/安全告警类型概述.md#)。|
 |主机缺乏安全防护。|开通安骑士企业版。|
 |保护状态为离线（Agent未安装或离线）。|[安装Agent](../../../../intl.zh-CN/接入云安全中心/Agent说明.md#)。|
