--- a/intl.zh-CN/用户指南/安全告警处理/查看和处理告警事件.md
+++ b/intl.zh-CN/用户指南/安全告警处理/查看和处理告警事件.md
@@ -12,32 +12,30 @@
 
     您也可以使用搜索和页签筛选功能快速定位到特定事件。例如，您可以通过输入告警或资产名称、筛选告警严重等级、事件状态或告警类型来搜索相关的告警事件。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/156275173351002_zh-CN.png)
+    ![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/156448136351002_zh-CN.png)
 
-    您可以在**安全告警处理**列表查看由云安全中心检测并提供的部分告警溯源信息，帮您快速定位攻击来源地址和攻击行为的路径分析。有关告警溯源的详细操作，参见[查看告警溯源和排查方案](intl.zh-CN/用户指南/安全告警处理/查看告警溯源和排查方案.md#)。
+    您可以在**安全告警处理**列表查看由云安全中心检测并提供的部分告警溯源信息，帮您快速定位攻击来源地址和攻击行为的路径分析。有关告警溯源的详细操作，参见[查看告警溯源和排查方案](cn.zh-CN/用户指南/安全告警处理/查看告警溯源和排查方案.md#)。
 
-    在**安全告警处理**页面中单击告警事件的名称，打开该告警事件的详情页面，可以查看其详情和该告警的自动化关联信息，帮助您更便捷和全面地分析威胁事件。有关告警自动化关联的操作，参见[告警自动化关联分析](intl.zh-CN/用户指南/安全告警处理/告警自动化关联分析.md#)。
+    在**安全告警处理**页面中单击告警事件的名称，打开该告警事件的详情页面，可以查看其详情和该告警的自动化关联信息，帮助您更便捷和全面地分析威胁事件。有关告警自动化关联的操作，参见[告警自动化关联分析](cn.zh-CN/用户指南/安全告警处理/告警自动化关联分析.md#)。
 
 4.  根据您的需求对不同告警事件执行相应处理。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/156275173350975_zh-CN.png)
+    ![2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/156448136350975_zh-CN.png)
 
-    -   **隔离**：仅限对**网站后门-发现后门（Webshell）文件**和**恶意进程（云查杀）**执行隔离操作。确认告警信息后，单击该操作可将网站后门文件加入文件隔离箱。被隔离的文件将无法对主机造成威胁，详细信息参见[文件隔离箱](intl.zh-CN/用户指南/安全告警处理/文件隔离箱.md#)。
+    -   **隔离**：仅限对**网站后门-发现后门（Webshell）文件**和**恶意进程（云查杀）**执行隔离操作。确认告警信息后，单击该操作可将网站后门文件加入文件隔离箱。被隔离的文件将无法对主机造成威胁，详细信息参见[文件隔离箱](cn.zh-CN/用户指南/安全告警处理/文件隔离箱.md#)。
 
         **说明：** 被成功隔离的文件在30天内可执行一键恢复，过期后系统将自动清除该文件。
 
     -   **标记为已处理**：确认告警并线下进行处理后，单击该操作后该告警状态将变为**已处理**。
     -   **忽略本次**：忽略本次告警，该告警状态将变为**已处理**，后续云安全中心不会再对该事件进行告警。
-    -   **标记为误报**：标记本次告警为误报后该告警状态将变为**已处理**，后续云安全中心不会再对该事件进行告警。您可以在**已处理**列表中定位到该事件对其进行**取消标记误报**的操作。
+    -   **加白名单**：如果告警为误报，您可以将本次告警加入白名单。告警加入白名单后该告警状态将变为**已处理**，后续云安全中心不会再对该事件进行告警。您可以在**已处理**列表中定位到该事件对其进行**取消白名单**的操作。
 
         **说明：** 告警误报是指系统对正常程序进行告警。常见的告警误报有 对外异常TCP发包可疑进程，提示您服务器上有进程在对其他设备发起了疑似扫描行为。
 
+5.  您也可以通过**安全告警**列表左下角的批量处理工具栏对多个告警事件进行批量处理。
 
-## 批量处理告警事件 {#section_tdf_q2n_bgb .section}
+    ![3](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/156448136453743_zh-CN.png)
 
-您也可以通过**安全告警**列表左下角的批量处理工具栏对多个告警事件进行批量处理。
+    **说明：** 批量处理告警事件前请详细了解告警事件的信息。
 
-![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/61174/156275173350977_zh-CN.png)
-
-**说明：** 批量处理告警事件前请详细了解告警事件的信息。
 
