--- a/cn.zh-CN/用户指南/安全告警处理/安全告警设置.md
+++ b/cn.zh-CN/用户指南/安全告警处理/安全告警设置.md
@@ -1,6 +1,6 @@
 # 安全告警设置 {#concept_qrk_ldm_sfb .concept}
 
-安全告警设置支持手动维护常用登录地和Web目录，也允许您设置安全告警等级范围和配置高级登录报警功能。
+安全告警设置支持手动维护常用登录地和Web目录，也允许您配置高级登录报警功能。
 
 ## 操作步骤 {#section_bys_bsj_zdb .section}
 
@@ -35,13 +35,4 @@
             **说明：** 出于性能效率考虑，不支持直接添加root目录作为Web目录。
 
         3.  单击**确定**，完成添加。
-    -   **设置安全告警等级范围** 
-
-        在**安全告警设置**页面最下方，勾选安全告警等级范围对需要在告警页面显示的安全事件等级范围进行筛选。
-
-        安全告警等级范围包括：
-
-        -   **紧急**：存在黑客成功攻击的安全事件，如恶意进程运行，发生拒绝服务等。
-        -   **可疑**：可能发生入侵行为的安全时间，如ECS异地登陆等。
-        -   **提醒**：需要确认的安全事件，如创建新账号等。
 
