--- a/intl.zh-CN/用户指南/日志分析/查看日志报表.md
+++ b/intl.zh-CN/用户指南/日志分析/查看日志报表.md
@@ -1,6 +1,6 @@
 # 查看日志报表 {#concept_bv3_bq3_kfb .concept}
 
-云安全中心**日志报表** 页面展示了日志服务默认的**仪表盘** 界面。您可以在当前仪表盘通过修改时间范围、添加过滤条件等操作，查看多种筛选条件下的仪表盘数据。
+云安全中心**日志报表** 页面展示了日志服务默认的**仪表盘** 界面。您可以在当前仪表盘通过修改时间范围、订阅日志报表、设置刷新等操作，查看多种筛选条件下的仪表盘数据。
 
 **日志报表**页面提供以下三类共9个默认的仪表盘：
 
@@ -23,25 +23,60 @@
 
 ## 操作步骤 {#section_ds3_2dl_kfb .section}
 
+您可以参考以下步骤查看日志报表相关信息。
+
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
-2.  单击左侧导航栏**日志分析**。
-3.  在**日志分析**页面单击**登录中心**/**进程中心**/**网络连接中心**切换到对应的日志报表页面。
+2.  单击左侧导航栏**调查响应** \> **日志分析**。
+3.  在**日志分析**页面，单击**日志报表**，并选择主机日志的任一类型，进入主机日志报表页面。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22733/155315391613510_zh-CN.png)
+    ![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22733/156453586853666_zh-CN.png)
 
-4.  单击**登录中心**/**进程中心**/**网络连接中心**左上角的时间选择器按钮![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22733/155315391613511_zh-CN.png)打开**时间**设置对话框。
-5.  在**时间**设置对话框中选择您需要的配置并单击**确定**保存您的设置。可选择相对时间、整点时间或设置自定义时间。
+4.  单击**登录中心**/**进程中心**/**网络连接中心**切换到对应的日志报表页面。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22733/155315391613512_zh-CN.png)
+    ![2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22733/156453586853671_zh-CN.png)
 
-    **说明：** 设置时间范围后，该页面所有的仪表盘都将显示该时间范围内的数据。
+5.  单击**登录中心**/**进程中心**/**网络连接中心**左上角的时间选择器按钮![3](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22733/156453586813511_zh-CN.png)打开**时间**设置对话框。
+6.  在**时间**设置对话框中选择您需要的配置并单击**确定**保存您的设置。可选择相对时间、整点时间或设置自定义时间。
 
-    **说明：** 时间选择器仅在当前页面临时生效，系统不保存该设置。您下次重新打开该报表页面时，仪表盘将恢复到默认时间范围。
+    ![4](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22733/156453586813512_zh-CN.png)
 
-6.  您可单击时间选择器下方的![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22733/155315391613513_zh-CN.png)按钮在打开的添加过滤条件对话框中配置对应的参数，单击**确定**保存该过滤条件。
+    **说明：** 
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22733/155315391613514_zh-CN.png)
+    -   设置时间范围后，该页面所有的仪表盘都将显示该时间范围内的数据。
+    -   时间选择器仅在当前页面临时生效，系统不保存该设置。您下次重新打开该报表页面时，仪表盘将恢复到默认时间范围。
+7.  您可单击**登录中心**/**进程中心**/**网络连接中心**左上角的的**订阅**按钮，在新建订阅页添加相应日志类型报表的订阅。
+    1.  在订阅配置页签，进行如下配置。
 
-    设置过滤条件后，日志列表仪表盘将展示过滤条件范围对应的数据。您可添加多个过滤条件，缩小报表数据展示范围。
+        ![4](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22733/156453586853672_zh-CN.png)
+
+        **订阅名称**：待订阅的日志报表名称。系统根据日志类型，显示默认设置，您可以修改。
+
+        **频率**：待订阅日志报表发送通知的时间。
+
+        -   **每小时**
+        -   **每天**：每天的一个整点（00:00~23:00）时刻
+        -   **每周**：**周一**/**周二**/**周三**/**周四**/**周五**/**周六**/**周日**的一个整点（00:00~23:00）时刻
+        -   **固定间隔**：每隔几天或几小时
+        -   **Cron**：以表达式自定义时间。Cron表达式的最小精度为分钟，格式为24小时制。您可根据界面举例自定义频率。
+        **添加水印**：图片自动加上通知渠道地址（邮箱或WebHook地址）。
+
+    2.  单击**下一步**，设置通知类型。
+
+        ![5](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22733/156453586853696_zh-CN.png)
+
+        **邮件**：添加收件人邮箱地址，支持添加多个收件人。
+
+        **WebHook-钉钉机器人**：添加WebHook请求地址。地址获取方法请参考[配置钉钉机器人通知](intl.zh-CN/用户指南/设置/通知.md#step_qxp_cvo_18r)。
+
+        ![6](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22733/156453586853697_zh-CN.png)
+
+    3.  单击**提交**，完成订阅添加。
+8.  您可单击**登录中心**/**进程中心**/**网络连接中心**左上角的**刷新**按钮，设置日志报表刷新频率。
+
+    ![7](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22733/156453586953705_zh-CN.png)
+
+    **仅一次**：立即刷新。
+
+    **自动刷新**：设置刷新频率。每15秒、60秒、5分钟或15分钟刷新一次。
 
 
