--- a/intl.zh-CN/用户指南/日志分析/高级管理.md
+++ b/intl.zh-CN/用户指南/日志分析/高级管理.md
@@ -4,22 +4,24 @@
 
 ## 操作步骤 {#section_xwt_h5z_kfb .section}
 
+您可以参考以下步骤对日志进行高级管理。
+
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
-2.  单击左侧导航栏**日志分析**。
+2.  单击左侧导航栏**调查响应** \> **日志分析**。
 3.  单击**日志分析**页面右上角的**高级设置**按钮。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23601/155315394713596_zh-CN.png)
+    ![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23601/156453593613596_zh-CN.png)
 
 4.  在日志服务高级管理对话框中单击**前往**打开日志库控制台进行相关操作。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23601/155315394713597_zh-CN.png)
+    ![2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/23601/156453593613597_zh-CN.png)
 
     具体高级操作参见：
 
-    -   [告警与通知](../../../../../intl.zh-CN/用户指南/告警/简介.md#)
-    -   [实时订阅与消费](../../../../../intl.zh-CN/用户指南/实时消费/简介.md#)
-    -   [数据投递](../../../../../intl.zh-CN/用户指南/数据投递/简介.md#)
-    -   [对接其他可视化](../../../../../intl.zh-CN/用户指南/可视化分析/其他可视化方案/对接Grafana.md#)
+    -   [告警与通知](../../../../intl.zh-CN/用户指南/告警/简介.md#)
+    -   [实时订阅与消费](../../../../intl.zh-CN/用户指南/实时消费/简介.md#)
+    -   [数据投递](../../../../intl.zh-CN/用户指南/数据投递/简介.md#)
+    -   [对接其他可视化](../../../../intl.zh-CN/用户指南/可视化分析/其他可视化方案/对接Grafana.md#)
 
 **说明：** 除了通过管理控制台进行操作外，日志分析服务还提供了 API（Application Programming Interface）方式写入、查询日志数据，管理您的项目及日志库等。API参考详见[日志分析API参考](https://www.alibabacloud.com/help/zh/doc-detail/93452.htm?spm=a2c63.l28256.b99.74.16b01de47z2muk)。
 
