--- a/intl.zh-CN/用户指南/设置/通知.md
+++ b/intl.zh-CN/用户指南/设置/通知.md
@@ -8,11 +8,11 @@
 
 **通知的设置流程如下图所示。**
 
-![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156404883151025_zh-CN.png)
+![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156453607451025_zh-CN.png)
 
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)
 2.  在左侧导航栏，单击**安全运营** \> **设置** \> **通知**。
-3.  针对**漏洞**、**基线检查**、**安全告警**、**AccessKey泄露情报**，分别勾选需要进行告警的安全事件等级（即**我关注的等级**）、**通知方式**、**通知时间**。![2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156404883151027_zh-CN.png)
+3.  针对**漏洞**、**基线检查**、**安全告警**、**AccessKey泄露情报**和**云安全配置检查**，分别勾选需要进行告警的安全事件等级（即**我关注的等级**）、**通知方式**、**通知时间**。![2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156453607451027_zh-CN.png)
 
  
 
@@ -24,20 +24,20 @@
 
     1.  在**钉钉机器人通知（Beta）**模块，单击**添加新的机器人**。
 
-        ![3](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156404883151028_zh-CN.png)
+        ![3](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156453607451028_zh-CN.png)
 
     2.  在**添加钉钉机器人**页面，配置钉钉机器人参数项。
 
-        ![4](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156404883151029_zh-CN.png)
+        ![4](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156453607551029_zh-CN.png)
 
         -   **机器人名称**：手动输入机器人名称。
         -   **Webhook地址**：在要应用该钉钉机器人的钉钉群中，找到机器人的Webhook链接，复制粘贴到**Webhook地址**输入栏中。
 
-            ![5](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156404883251030_zh-CN.png)
+            ![5](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156453607551030_zh-CN.png)
 
-            ![6](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156404883251032_zh-CN.png)
+            ![6](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156453607551032_zh-CN.png)
 
-            ![7](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156404883251033_zh-CN.png)
+            ![7](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156453607551033_zh-CN.png)
 
             **说明：** 未安装钉钉并建立钉钉群的用户，无法使用钉钉机器人通知。如果已有钉钉群中未添加钉钉机器人，需要在钉钉群**群设置** \> **群机器人** \> **添加群机器人** \> **自定义（通过Webhook接入自定义服务）**，添加自定义机器人。
 
@@ -55,7 +55,7 @@
 
         新创建的钉钉机器人通知是默认启用的。
 
-        ![8](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156404883251036_zh-CN.png)
+        ![8](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/146807/156453607551036_zh-CN.png)
 
         **说明：** 添加机器人通知后，需单击**操作**栏的**测试**，验证钉钉机器人通知是否已经和钉钉群连通。
 
