--- a/cn.zh-CN/用户指南/设置/设置.md
+++ b/cn.zh-CN/用户指南/设置/设置.md
@@ -1,6 +1,6 @@
 # 设置 {#concept_tst_13z_dhb .concept}
 
-本文档介绍了云安全中心病毒查杀、网站后门查杀、Agent防护模式的配置操作。
+本文档介绍了云安全中心病毒查杀、网站后门查杀、容器威胁检测、Agent防护模式的配置操作。
 
 ## 病毒查杀 {#section_umn_ke0_zpm .section}
 
@@ -16,7 +16,7 @@
 2.  定位到**安全运营** \> **设置**页面，单击**设置**页签。
 3.  在病毒查杀模块，单击**管理**。
 
-    ![0](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156404880449752_zh-CN.png)
+    ![0](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156454227749752_zh-CN.png)
 
 4.  在病毒查杀检测范围对话框中勾选要开启病毒查杀自动隔离的服务器。
 
@@ -41,13 +41,21 @@
 1.  在云安全中心控制台定位到**安全运营** \> **设置**页面，单击**设置**页签。
 2.  在网站后门查杀模块，单击**管理**。
 
-    ![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156404880449755_zh-CN.png)
+    ![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156454227749755_zh-CN.png)
 
 3.  设置需要开启网站后门查杀的服务器。
 
     从左侧**未检测服务器**列表中勾选要开启网站后门查杀的服务器，单击右向箭头，将其移入右侧**已检测服务器**列表中，为该服务器将开启网站后门查杀；将服务器从右侧框移入左侧框，为该服务器关闭网站后门查杀功能。
 
 4.  单击**确定**。
+
+## 容器威胁检测 {#section_yk5_x79_1dq .section}
+
+云安全中心**企业版**支持**容器威胁检测**能力，实时为您检测正在运行的容器安全状态，帮助您及时发现容器中的安全隐患和黑客入侵行为。容器威胁检测功能无需配置。
+
+**说明：** 云安全中心企业版**容器威胁检测**功能无需设置，基础版或高级版用户需要先升级至企业版，才能使用**容器威胁检测**服务。
+
+![3](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156454227753731_zh-CN.png)
 
 ## 防护模式管理 {#section_ha1_x19_1to .section}
 
@@ -65,7 +73,7 @@ Agent插件在服务器上运行时，会占用少量服务器资源。您可以
 1.  在云安全中心控制台定位到**安全运营** \> **设置**页面，单击**设置**页签。
 2.  在**防护模式管理**模块，单击**管理**。
 
-    ![2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156404880452786_zh-CN.png)
+    ![2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/147751/156454227852786_zh-CN.png)
 
 3.  在防护模式管理对话框中，为服务器配置Agent运行模式。
 
