--- a/cn.zh-CN/用户指南/日志分析/开通日志分析服务.md
+++ b/cn.zh-CN/用户指南/日志分析/开通日志分析服务.md
@@ -1,42 +1,39 @@
 # 开通日志分析服务 {#concept_z5c_2z3_kfb .concept}
 
-态势感知**企业版**支持全量日志服务，提供准确实时的日志查询和强大的日志分析功能。
+云安全中心**高级版**和**企业版**支持全量日志服务，提供准确实时的日志查询和强大的日志分析功能。
 
-使用日志分析服务之前，您需在态势感知控制台开通和购买日志服务。
+使用日志分析服务之前，您需在云安全中心控制台开通和购买日志服务。
 
-态势感知**基础版**用户如需使用日志分析服务，需先升级到**企业版**。详细信息参见[服务续费与升级](../../../../../intl.zh-CN/产品定价/服务续费与升级.md#section_syq_dcc_zdb)。
+**说明：** 仅企业版用户支持查看网络日志，高级版用户不支持。即高级版用户在控制台日志分析页面仅能查看安全日志和主机日志。
 
-**说明：** 态势感知使用专属的日志库，日志库限制条件参见[日志库限制说明](../../../../../intl.zh-CN/产品简介/限制说明.md#)。
+云安全中心**基础版**用户如需使用日志分析服务，需先升级到**高级版**或**企业版**。详细信息参见[服务续费与升级](../../../../intl.zh-CN/产品定价/服务续费与升级.md#section_syq_dcc_zdb)。
+
+**说明：** 云安全中心使用专属的Logtore日志库，日志库限制条件参见[日志库限制说明](../../../../intl.zh-CN/产品简介/限制说明.md#)。
 
 ## 操作步骤 {#section_hb4_p5l_kfb .section}
 
-1.  登录[态势感知控制台](https://yundun.console.aliyun.com/?spm=5176.2020520001.1011.3.796f4bd3iakMqe&p=sas#/sas/overviews)。
-2.  在左侧导航栏单击**日志分析**进入日志分析开通引导页面。
+1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
+2.  在左侧导航栏单击**调查响应** \> **日志分析**进入日志分析开通引导页面。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/154812419213517_zh-CN.png)
+    ![3](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/156456080154004_zh-CN.png)
 
-3.  在**日志分析开通引导**页面单击**立即开通**。
+3.  在**开通日志服务**页面，单击**去开通**，完成日志服务开通和RAM授权。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/154812419213516_zh-CN.png)
+    ![0](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/156456080153994_zh-CN.png)
 
-4.  在变配页面**日志分析**选项单击**是**。
+4.  在**开通与购买**页面，单击**立即开通**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/154812419332872_zh-CN.png)
+    ![1](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/156456080253996_zh-CN.png)
 
-5.  单击**立即购买**。
-6.  确认订单后勾选**态势感知SAS服务协议**并完成支付。
-7.  在控制台**日志分析开通引导**页面单击**立即授权**完成授权。
+5.  在**变配**页面的**日志分析**选项单击**是**，并设置**日志存储容量**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/154812419332871_zh-CN.png)
+    ![2](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/156456080232872_zh-CN.png)
 
-8.  在**云资源访问授权**页面单击**同意授权**，为访问日志服务进行授权。
+6.  勾选**云安全中心服务协议**，单击**去支付**完成支付。
+7.  支付完成后，在云安全中心控制台引导页面，单击**已完成开通**。
 
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/154812419332873_zh-CN.png)
-
-9.  在**日志分析开通引导**页面单击**开始使用**，开始使用态势感知日志分析服务。
-
-    ![](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/154812419332874_zh-CN.png)
+    ![4](http://static-aliyun-doc.oss-cn-hangzhou.aliyuncs.com/assets/img/22742/156456080254006_zh-CN.png)
 
 
-授权完成后您可以开始使用态势感知日志分析服务了。
+您可以开始使用云安全中心日志分析服务了。
 
