--- a/cn.zh-CN/常见问题/云安全中心常见问题概览.md
+++ b/cn.zh-CN/常见问题/云安全中心常见问题概览.md
@@ -18,9 +18,10 @@
 -   [Agent一键安装失败怎么办？](intl.zh-CN/常见问题/常见问题隐藏目录/Agent一键安装失败怎么办？.md#)
 -   [在ECS Linux系统服务器中安装Agent时，收到“Permission denied”的错误提示，应该如何处理？](intl.zh-CN/常见问题/常见问题隐藏目录/在ECS Linux系统服务器中安装Agent时，收到“Permission denied”的错误提示，应该如何处理？.md#)
 -   [如何查看云安全中心Agent的日志？](intl.zh-CN/常见问题/常见问题隐藏目录/如何查看云安全中心Agent的日志？.md#)
--   [金融云、VPC用户安装Agent](../../../../intl.zh-CN/接入云安全中心/金融云、VPC用户安装Agent.md#)
+-   [金融云、VPC用户安装Agent](../../../../intl.zh-CN/接入云安全中心/金融云和VPC用户安装Agent.md#)
 -   [如何在非阿里云服务器上使用云安全中心？](intl.zh-CN/常见问题/常见问题隐藏目录/如何在非阿里云服务器上使用云安全中心？.md#)
 -   [如何在镜像中安装云安全中心？](intl.zh-CN/常见问题/常见问题隐藏目录/如何在镜像中安装云安全中心？.md#)
+-   [虚拟机和轻量级服务器是否支持安装Agent？](intl.zh-CN/常见问题/常见问题隐藏目录/虚拟机和轻量级服务器是否支持安装Agent？.md#)
 
 ## 主机异常相关问题 {#section_5am_kp7_l50 .section}
 
