--- a/intl.zh-CN/产品简介/功能特性.md
+++ b/intl.zh-CN/产品简介/功能特性.md
@@ -76,7 +76,7 @@
 -   可疑通信：检测后门程序通信、可疑Webshell通信行为等。
 
  |X|√|√|
-|云产威胁检测|基于用户行为分析，对云产品的异常使用进行检测。|X|X|√|
+|云产品威胁检测|基于用户行为分析，对云产品的异常使用进行检测。|X|X|√|
 |应用事件检测|对通过应用入侵的行为进行检测，如：SQLServer。|X|√|√|
 |自动化攻击溯源|支持多类攻击自动化攻击溯源，溯源出攻击IP和主机中的入侵弱点。|X|X|√|
 |其他|DDoS攻击行为检测。|√|X|√|
