--- a/cn.zh-CN/产品定价/服务续费与升级.md
+++ b/cn.zh-CN/产品定价/服务续费与升级.md
@@ -1,12 +1,12 @@
 # 服务续费与升级 {#concept_qq3_dcc_zdb .concept}
 
-在云安全中心高级版和企业版服务到期前，您需要对其续费，以享受正常的安全服务；您也可以在服务到期后3日内续费，以保留云安全中心配置和数据。当您账号下的服务器数量超过当前配置的资产规模时，您需要对当前配置升级，即增加资产规模并补差价，才能继续使用云安全中心企业版服务。
+在云安全中心高级版和企业版服务到期前，您需要对其续费，以享受正常的安全服务；您也可以在服务到期后3日内续费，以保留云安全中心配置和数据。当您账号下的服务器数量超过当前配置的资产规模时，您需要对当前配置升级，即增加资产规模并补差价，才能继续使用云安全中心相应服务。
 
 ## 到期说明 {#section_ryq_dcc_zdb .section}
 
 云安全中心高级版和企业版服务到期前7日，系统会以站内信的的方式通知您续费。如果在服务到期前，您没有及时续费，那么在服务到期日的次日，您将无法使用相应服务。
 
-服务到期后的3日内，系统会保留您在云安全中心中的所有配置与数据，如资产分组、标签、文件隔离箱、漏洞白名单、基线检查模板、基线检查白名单，以及各种功能设置，资产指纹和安全日志数据等，您可以在此期间续费，可以继续使用当前配置与历史数据。
+服务到期后的3日内，系统会保留您在云安全中心中的所有配置与数据，如资产分组、标签、文件隔离箱、漏洞白名单、基线检查模板、基线检查白名单，以及各种功能设置，资产指纹和安全日志数据等，您在此期间续费，可以继续使用当前配置与历史数据。
 
 如果服务到期后的3日内您未进行续费，系统将释放当前配置和历史数据，且您无法使用云安全中心的功能。此时，只有通过重新购买来启用云安全中心高级版或企业版服务。
 
@@ -32,11 +32,10 @@
 
 ## 升级流程 {#section_wyq_dcc_zdb .section}
 
+参照以下步骤，为您的云安全中心服务升级：
+
 1.  登录[云安全中心控制台](https://yundun.console.aliyun.com/?p=sas)。
 2.  前往总览页，单击页面右上角的**升级**。
-
-    **说明：** 只有当您的服务器数量是当前配置中资产规模的120%时，总览页右上角才会出现**升级**按钮。
-
 3.  选择实际资产规模，单击**去支付**。
 4.  完成支付。
 
