--- a/intl.zh-CN/产品简介/功能特性.md
+++ b/intl.zh-CN/产品简介/功能特性.md
@@ -80,13 +80,21 @@
 |应用事件检测|对通过应用入侵的行为进行检测，如：SQLServer。|X|√|√|
 |自动化攻击溯源|支持多类攻击自动化攻击溯源，溯源出攻击IP和主机中的入侵弱点。|X|X|√|
 |其他|DDoS攻击行为检测。|X|X|√|
-|漏洞管理|Linux软件漏洞|【Linux软件漏洞检测】对标CVE官方漏洞库，采用OVAL匹配引擎进行软件版本比对，对当前使用的软件版本中存在的漏洞进行告警。|√|√|√|
+|漏洞管理|Linux软件漏洞|【Linux软件漏洞检测】对标CVE官方漏洞库，采用OVAL匹配引擎进行软件版本比对，对当前使用的软件版本中存在的漏洞进行告警。 **说明：** 基础版只支持漏洞自动检测，不支持漏洞修复和漏洞**立即扫描**操作。如需使用云安全中心对漏洞进行修复和手动**立即扫描**资产是否存在漏洞，需要升级到高级版和企业版。
+
+ |只检测|√|√|
 |【漏洞修复】支持一键运行update升级命令修复漏洞，以及生成漏洞修复命令，用于手动修复。|X|√|√|
-|Windows系统漏洞|【Windows系统漏洞检测】同步微软官网补丁源，对高危及有影响的漏洞进行检测和提醒。|√|√|√|
+|Windows系统漏洞|【Windows系统漏洞检测】同步微软官网补丁源，对高危及有影响的漏洞进行检测和提醒。 **说明：** 基础版只支持漏洞自动检测，不支持漏洞修复和漏洞**立即扫描**操作。如需使用云安全中心对漏洞进行修复和手动**立即扫描**资产是否存在漏洞，需要升级到高级版和企业版。
+
+ |只检测|√|√|
 |【漏洞修复】支持一键下载补丁文件并静默安装更新，需要重启的漏洞会进行提醒。|X|√|√|
-|Web-CMS漏洞|【Web-CMS漏洞检测】监控网站目录，识别通用建站软件，通过漏洞文件比对方式检测建站软件中的漏洞。|√|√|√|
+|Web-CMS漏洞|【Web-CMS漏洞检测】监控网站目录，识别通用建站软件，通过漏洞文件比对方式检测建站软件中的漏洞。 **说明：** 基础版只支持漏洞自动检测，不支持漏洞修复和漏洞**立即扫描**操作。如需使用云安全中心对漏洞进行修复和手动**立即扫描**资产是否存在漏洞，需要升级到高级版和企业版。
+
+ |只检测|√|√|
 |【漏洞修复】自研漏洞补丁，支持一键修复，通过文件替换、修改等方式从源代码级别修复漏洞。|X|√|√|
-|应用漏洞|提供系统服务弱口令、系统服务和应用服务的漏洞检测及修复服务。|X|X|√|
+|应用漏洞|提供系统服务弱口令、系统服务和应用服务的漏洞检测及修复服务。 **说明：** 应用漏洞为企业版功能，基础版和高级版不支持。如需使用云安全中心对应用漏洞进行修复和检测资产是否存在漏洞，需要升级到企业版。
+
+ |X|X|√|
 |基线配置核查|主机基线|【主机基线检查】通过任务下发模式，对主机进行安全配置扫描，对未符合标准的项目进行提醒。 【主机基线检查范围】
 
 -   账号安全：检测密码策略合规、系统及应用弱口令等。
