--- a/intl.zh-CN/产品简介/功能特性.md
+++ b/intl.zh-CN/产品简介/功能特性.md
@@ -95,6 +95,11 @@
 |应用漏洞|提供系统服务弱口令、系统服务和应用服务的漏洞检测及修复服务。 **说明：** 应用漏洞为企业版功能，基础版和高级版不支持。如需使用云安全中心对应用漏洞进行修复和检测资产是否存在漏洞，需要升级到企业版。
 
  |X|X|√|
+| |立即扫描|云安全中心支持对您的资产进行手动**立即扫描**、实时检测是否存在漏洞的功能。 **说明：** 除应用漏洞外，其他几类漏洞只有高级版和企业版才能使用**立即扫描**功能。
+
+应用漏洞属于企业版功能，基础版和高级版不支持，只有企业版才可使用**立即扫描**功能。
+
+ |X|√（高级版不支持应用漏洞）|√|
 |基线配置核查|主机基线|【主机基线检查】通过任务下发模式，对主机进行安全配置扫描，对未符合标准的项目进行提醒。 【主机基线检查范围】
 
 -   账号安全：检测密码策略合规、系统及应用弱口令等。
